using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace Const
{
    public class WorkAnim : MonoBehaviour
    {
        public const string SPEED = "speed";
        public const string IS_JUMPING = "isJumping";
        public const string VERTICAL_SPEED = "VerticalSpeed";
    }
}
